<resources>
    <string name="app_name">MedicationManager</string>
    <string name="add">+</string>
    <string name="name_medication">Name Medication</string>
    <string name="number_of_pills">Number of Pills</string>
    <string name="notification_by_e_mail">notification by e-mail</string>
    <string name="name_1">Name</string>
    <string name="push_notification">Push notification</string>
    <string name="date">Date</string>
    <string name="decreaseBtn">-</string>
    <string name="time">Time</string>
    <string name="_1">1</string>
    <string name="increase">+</string>
    <string name="amount_of_pills">Amount of pills</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="e_mail">E-mail</string>
    <string name="login2">Login</string>
    <string name="timeBtn">Time</string>
    <string name="medication_name">Medication name</string>
    <string name="addBtn">Add</string>
    <string name="setting">Setting</string>
    <string name="drugmanager">DrugManager</string>
</resources>
